WIP: adding authentification from oauth to swagger
