# docs/swagger.json
@@ -1,16 +1,24 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server.",
-        "title": "Azugo Training API",
-        "contact": {},
+        "description": "This is a simple GO API.",
+        "title": "Swagger Example API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
         "version": "1.0"
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
         "/add": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Adds a new user and returns the updated user list",
                 "consumes": [
                     "application/json"
@@ -57,6 +65,11 @@
         },
         "/check": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Checks whether a user exists and whether the password is correct",
                 "consumes": [
                     "application/json"
@@ -97,6 +110,11 @@
         },
         "/delete": {
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a user by username or email",
                 "consumes": [
                     "application/json"
@@ -143,6 +161,11 @@
         },
         "/find/{username}": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Looks up a user by the username provided in the URL path and returns public user data.",
                 "produces": [
                     "application/json"
@@ -178,6 +201,11 @@
         },
         "/list": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns a list of all users (without passwords)",
                 "consumes": [
                     "application/json"
@@ -207,6 +235,11 @@
         },
         "/login/{id}/{password}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Authenticate user by passing either username or email and password in the URL path",
                 "produces": [
                     "text/plain"
@@ -255,6 +288,11 @@
         },
         "/update": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates user email or password by username",
                 "consumes": [
                     "application/json"
@@ -351,6 +389,13 @@
                     "maxLength": 20
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
